--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Herzlich Willkommen, wir befinden uns noch in der Entwicklungsphase, aber Sie können sich selbst schon
-                einmal raten!</h1>
+            <h1>Herzlich Willkommen, wir befinden uns noch in der Entwicklungsphase, aber Sie können sich selbst schon einmal raten!</h1>
         </header>
 
         <main>
@@ -22,32 +21,62 @@
                 <h2>Survey</h2>
                 <form id="survey-form">
                     <div class="question">
-                        <label for="question1">Wie süß schätzt du dich ein?</label>
-                        <input type="range" id="question1" name="question1" min="1" max="5" value="">
+                        <label>Wie süß schätzt du dich ein?</label>
+                        <div class="stars" data-question="1">
+                            <span data-value="1" class="star">&#9733;</span>
+                            <span data-value="2" class="star">&#9733;</span>
+                            <span data-value="3" class="star">&#9733;</span>
+                            <span data-value="4" class="star">&#9733;</span>
+                            <span data-value="5" class="star">&#9733;</span>
+                        </div>
                         <span class="feedback" id="feedback1"></span>
                     </div>
 
                     <div class="question">
-                        <label for="question2">Wie würdest du dein Aussehen raten?</label>
-                        <input type="range" id="question2" name="question2" min="1" max="5" value="">
+                        <label>Wie würdest du dein Aussehen raten?</label>
+                        <div class="stars" data-question="2">
+                            <span data-value="1" class="star">&#9733;</span>
+                            <span data-value="2" class="star">&#9733;</span>
+                            <span data-value="3" class="star">&#9733;</span>
+                            <span data-value="4" class="star">&#9733;</span>
+                            <span data-value="5" class="star">&#9733;</span>
+                        </div>
                         <span class="feedback" id="feedback2"></span>
                     </div>
 
                     <div class="question">
-                        <label for="question3">Für wie außergewöhnlich hältst du dich?</label>
-                        <input type="range" id="question3" name="question2" min="1" max="5" value="">
+                        <label>Für wie außergewöhnlich hältst du dich?</label>
+                        <div class="stars" data-question="3">
+                            <span data-value="1" class="star">&#9733;</span>
+                            <span data-value="2" class="star">&#9733;</span>
+                            <span data-value="3" class="star">&#9733;</span>
+                            <span data-value="4" class="star">&#9733;</span>
+                            <span data-value="5" class="star">&#9733;</span>
+                        </div>
                         <span class="feedback" id="feedback3"></span>
                     </div>
 
                     <div class="question">
-                        <label for="question4">Wie schätzt du deine Fähigkeit Snacks zu besorgen ein?</label>
-                        <input type="range" id="question4" name="question2" min="1" max="5" value="">
+                        <label>Wie schätzt du deine Fähigkeit Snacks zu besorgen ein?</label>
+                        <div class="stars" data-question="4">
+                            <span data-value="1" class="star">&#9733;</span>
+                            <span data-value="2" class="star">&#9733;</span>
+                            <span data-value="3" class="star">&#9733;</span>
+                            <span data-value="4" class="star">&#9733;</span>
+                            <span data-value="5" class="star">&#9733;</span>
+                        </div>
                         <span class="feedback" id="feedback4"></span>
                     </div>
 
                     <div class="question">
-                        <label for="question5">Wie gut denkst du ist deine Sehfähigkeit?</label>
-                        <input type="range" id="question5" name="question2" min="1" max="5" value="">
+                        <label>Wie gut denkst du ist deine Sehfähigkeit?</label>
+                        <div class="stars" data-question="5">
+                            <span data-value="1" class="star">&#9733;</span>
+                            <span data-value="2" class="star">&#9733;</span>
+                            <span data-value="3" class="star">&#9733;</span>
+                            <span data-value="4" class="star">&#9733;</span>
+                            <span data-value="5" class="star">&#9733;</span>
+                        </div>
                         <span class="feedback" id="feedback5"></span>
                     </div>
 
