--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Herzlich Willkommen, wir befinden uns noch in der Entwicklungsphase, aber Sie können sich selbst schon einmal raten!</h1>
+            <h1>Herzlich Willkommen, wir befinden uns noch in der Entwicklungsphase!</h1>
         </header>
 
         <main>
