--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Herzlich Willkommen, wir befinden uns noch in der Entwicklungsphase!</h1>
         </header>
+        <img src="./image.jpg" alt="Witch" style="width:100%; max-height: 300px; object-fit: cover;">
 
         <main>
             <section class="content">
